--- a/public/client/bootstrap/css/bootstrap.css
+++ b/public/client/bootstrap/css/bootstrap.css
@@ -240,6 +240,7 @@ th {
   }
   .navbar {
     display: none;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   }
   .btn > .caret,
   .dropup > .btn > .caret {
