--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -1,38 +1,4 @@
-/*! =========================================================
- *
- Material Dashboard - V1.0.0
-*
-* =========================================================
-*
-* Copyright 2016 Creative Tim (http://www.creative-tim.com/product/material-dashboard)
- *
- *                       _oo0oo_
- *                      o8888888o
- *                      88" . "88
- *                      (| -_- |)
- *                      0\  =  /0
- *                    ___/`---'\___
- *                  .' \|     |// '.
- *                 / \|||  :  |||// \
- *                / _||||| -:- |||||- \
- *               |   | \  -  /// |   |
- *               | \_|  ''\---/''  |_/ |
- *               \  .-\__  '-'  ___/-. /
- *             ___'. .'  /--.--\  `. .'___
- *          ."" '<  `.___\_<|>_/___.' >' "".
- *         | | :  `- \`.;`\ _ /`;.`/ - ` : | |
- *         \  \ `_.   \_ __\ /__ _/   .-` /  /
- *     =====`-.____`.___ \_____/___.-`___.-'=====
- *                       `=---='
- *
- *     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- *
- *               Buddha Bless:  "No Bugs"
- *
- * ========================================================= */
-/* ANIMATION */
-/* SHADOWS */
-/* Shadows (from mdl http://www.getmdl.io/) */
+
 .noUi-target,
 .noUi-target * {
   -webkit-touch-callout: none;
@@ -186,12 +152,7 @@
   border-color: #f44336;
 }
 
-/*!
-Animate.css - http://daneden.me/animate
-Licensed under the MIT license - http://opensource.org/licenses/MIT
 
-Copyright (c) 2015 Daniel Eden
-*/
 .animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
@@ -1626,7 +1587,11 @@ output {
 }
 .radio label,
 .checkbox label {
-  min-height: 20px;
+  min-height: 25px;
+}
+
+.checkbox label input{
+  font-weight: bold;
 }
 
 .form-control-static {
@@ -1942,7 +1907,7 @@ output {
 label {
   font-size: 14px;
   line-height: 1.42857;
-  color: #AAAAAA;
+  color: black;
   font-weight: 400;
 }
 
@@ -2391,7 +2356,8 @@ select.form-control[multiple], .form-group.is-focused select.form-control[multip
 .checkbox label {
   cursor: pointer;
   padding-left: 0;
-  color: rgba(0,0,0, 0.26);
+  color: black;
+  font-size: 18px;
 }
 .form-group.is-focused .checkbox label {
   color: rgba(0,0,0, 0.26);
@@ -3721,6 +3687,12 @@ footer .btn {
   background: linear-gradient(60deg, #ef5350, #e53935);
   box-shadow: 0 12px 20px -10px rgba(244, 67, 54, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(244, 67, 54, 0.2);
 }
+.card [data-background-color="white"] {
+  background: linear-gradient(60deg, #ffffff, #ffffff);
+  box-shadow: 0 12px 20px -10px rgba(255,255,255, 0.9), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(255,255,255, 0.9);
+}
+
+
 .card [data-background-color] {
   color: #FFFFFF;
 }
