--- a/public/client/bootstrap/css/bootstrap.css
+++ b/public/client/bootstrap/css/bootstrap.css
@@ -2648,7 +2648,7 @@ input[type="search"] {
   min-height: 20px;
   padding-left: 20px;
   margin-bottom: 0;
-  font-weight: normal;
+  font-weight: bold;
   cursor: pointer;
 }
 .radio input[type="radio"],
