--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -631,7 +631,7 @@ h2.title {
   transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
 .main-panel > .content {
-  margin-top: 70px;
+  margin-top: 80px;
   padding: 30px 15px;
   min-height: calc(100% - 123px);
 }
@@ -1348,7 +1348,34 @@ h2.title {
 .navbar .navbar-nav > li > .profile-photo {
   margin: 5px 2px;
 }
-
+.sidebar .user .photo,
+.off-canvas-sidebar .user .photo {
+  width: 80px;
+  height: 80px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto;
+  box-shadow: 0 10px 30px -12px rgba(0, 0, 0, 0.42), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+}
+.sidebar .user .photo img,
+.off-canvas-sidebar .user .photo img {
+  width: 100%;
+}
+.sidebar-mini .sidebar .user .photo {
+   width: 50px;
+   height: 50px;
+   border-width: 2px;
+ }
+ .animation-transition-general, .sidebar .nav p,
+.off-canvas-sidebar .nav p, .sidebar .user .photo,
+.off-canvas-sidebar .user .photo, .sidebar .user a,
+.off-canvas-sidebar .user a, .login-page .card-login, .lock-page .card-profile {
+  -webkit-transition: all 300ms linear;
+  -moz-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
+  -ms-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
 .navbar-default:not(.navbar-transparent) .navbar-nav > li > a.btn.btn-white.btn-simple {
   color: #555555;
 }
@@ -3341,7 +3368,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 .navbar-absolute {
   position: absolute;
   width: 100%;
-  padding-top: 10px;
+  padding-top: 0;
   z-index: 1029;
 }
 
