--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -615,9 +615,9 @@ h2.title {
 .main-panel {
   position: relative;
   z-index: 2;
-  float: right;
+
   overflow: auto;
-  width: calc(100% - 260px);
+
   min-height: 100%;
   -webkit-transform: translate3d(0px, 0, 0);
   -moz-transform: translate3d(0px, 0, 0);
@@ -2877,20 +2877,55 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 .modal-small .modal-body {
   margin-top: 20px;
 }
+.navbar-fixed-top,
+.navbar-fixed-bottom {
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+}
 
+.card-background{
+  /* The image used */
+
+  /* Set a specific height */
+  height: 200px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.card-background-main{
+
+  background-image: url("/img/default/pexels-photo.png");
+
+}
+.card-background-sub{
+  background-image: url("/img/default/library.jpg");
+
+}
 .navbar {
   border: 0;
   border-radius: 3px;
   border-bottom: 1px solid #ededf3;
   padding: 10px 0;
-}
-.navbar .navbar-brand {
+
   position: relative;
   height: 50px;
   line-height: 30px;
   color: inherit;
   padding: 10px 15px;
 }
+.navbar-brand {
+  float: left;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+}
+
 .navbar .navbar-brand:hover, .navbar .navbar-brand:focus {
   color: inherit;
   background-color: transparent;
@@ -3338,7 +3373,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
         }
     */
   }
-  .navbar .navbar-brand {
+  .navbar {
     height: 50px;
     padding: 10px 15px;
   }
