--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -622,7 +622,7 @@ h2.title {
 .main-panel {
   position: relative;
   z-index: 2;
-  float:right;
+
   overflow: auto;
 
   min-height: 100%;
@@ -2901,14 +2901,16 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   height: 200px;
 }
 .card-background-sub{
-height: 100px;
+height: 100%;
+max-height: 200px;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url("/img/default/pexels-photo-218434.jpeg");
 
 }
 .card-background-sub-table{
-height: 100px;
+  height: 100%;
+  max-height: 200px;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url("/img/default/books-magazines-building-school.png");
