--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -614,7 +614,7 @@ h2.title {
 
 .main-panel-main{
   float:right;
-    width: calc(100% - 260px);
+  width: calc(100% - 260px);
 }
 .main-panel-sub{
   float:none;
@@ -1363,9 +1363,9 @@ photo {
   margin: 0 auto;
   box-shadow: 0 10px 30px -12px rgba(0, 0, 0, 0.42), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
   width: 100%;
-   width: 50px;
-   height: 50px;
-   border-width: 2px;
+  width: 50px;
+  height: 50px;
+  border-width: 2px;
 
 
   -webkit-transition: all 300ms linear;
@@ -2901,8 +2901,8 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   height: 200px;
 }
 .card-background-sub{
-height: 100%;
-max-height: 200px;
+  height: 100%;
+  max-height: 200px;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url("/img/default/pexels-photo-218434.jpeg");
@@ -3247,6 +3247,15 @@ max-height: 200px;
 }
 .navbar.navbar-info .dropdown-menu {
   border-radius: 3px !important;
+}
+.modal-header, .close {
+  background-color: #5cb85c;
+  color:white !important;
+  text-align: center;
+  font-size: 30px;
+}
+.modal-footer {
+  background-color: #f9f9f9;
 }
 .navbar.navbar-info .dropdown-menu li > a:hover, .navbar.navbar-info .dropdown-menu li > a:focus {
   color: #FFFFFF;
