--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -2900,19 +2900,27 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   background-image: url("/img/default/pexels-photo.png");
   height: 200px;
 }
-.card-background-sub{
+.card-background-sub, .card-background-sub-table, .card-background-contact, .card-background-table{
   height: 100%;
   max-height: 200px;
   background-repeat: no-repeat;
   background-size: cover;
+
+}
+.card-background-sub{
   background-image: url("/img/default/pexels-photo-218434.jpeg");
 
 }
+.card-background-application{
+  background-image: url("https://static.pexels.com/photos/226107/pexels-photo-226107.jpeg");
+
+}
+
+.card-background-contact{
+  background-image: url("/img/default/phone-old-year-built-1955-bakelite-163008.jpeg");
+
+}
 .card-background-sub-table{
-  height: 100%;
-  max-height: 200px;
-  background-repeat: no-repeat;
-  background-size: cover;
   background-image: url("/img/default/books-magazines-building-school.png");
 
 }
