--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -2924,7 +2924,26 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   background-image: url("/img/default/books-magazines-building-school.png");
 
 }
-
+.card .card-header.card-header-icon {
+  float: left;
+}
+.icon{
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+.card .card-header.card-header-icon i {
+  width: 33px;
+  height: 33px;
+  text-align: center;
+  line-height: 33px;
+}
+.card .card-header.card-header-icon + .card-content .card-title {
+  padding-bottom: 15px;
+}
+.card-plain .card-header-icon {
+  margin-right: 15px;
+}
 .navbar {
   border: 0;
   border-radius: 3px;
@@ -3594,7 +3613,9 @@ footer .btn {
   position: relative;
   width: 100%;
   margin: 25px 0;
-  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+  -webkit-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.75);
   border-radius: 3px;
   color: rgba(0,0,0, 0.87);
   background: #fff;
@@ -3792,7 +3813,7 @@ footer .btn {
   float: left;
   text-align: center;
 }
-.card-stats .card-header i {
+.card-stats .card-header i  {
   font-size: 36px;
   line-height: 56px;
   width: 56px;
@@ -3861,6 +3882,14 @@ footer .btn {
   max-width: 130px;
   max-height: 130px;
   margin: -50px auto 0;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 10px 30px -12px rgba(0, 0, 0, 0.42), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+}
+.icon {
+  max-width: 50px;
+  max-height: 50px;
+
   border-radius: 50%;
   overflow: hidden;
   box-shadow: 0 10px 30px -12px rgba(0, 0, 0, 0.42), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
