--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -439,6 +439,22 @@ h2.title {
   width: 60px;
   height: 60px;
 }
+.ios { position:absolute;
+  right: 20px;
+  top:14px;
+  -webkit-transition:all 300ms ease-in 0s;
+  -moz-transition: all 300ms ease-in 0s;
+  -o-transition: all 300ms ease-in 0s;
+  transition: all 300ms ease-in 0s;}
+
+.ui-state-active ios {
+  color: #ACD4CE;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
 .sidebar .nav,
 .off-canvas-sidebar .nav {
   margin-top: 20px;
@@ -3666,6 +3682,16 @@ footer .btn {
   padding: 15px;
   background-color: #999999;
 }
+.card  .card-header-pills{
+  box-shadow: 0 10px 30px -12px rgba(0, 0, 0, 0.42), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+  margin: -20px 15px 0;
+  border-radius: 50px;
+
+  padding: 10px;
+  background-color: #999999;
+}
+
+
 .card .card-header .title {
   color: #FFFFFF;
 }
