--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -2361,6 +2361,7 @@ select.form-control[multiple], .form-group.is-focused select.form-control[multip
   display: block;
   max-width: 89%;
 }
+
 .alert .alert-icon {
   display: block;
   float: left;
@@ -3933,11 +3934,18 @@ footer .btn {
 
 }
 .card-size{
-  margin-left: 5px; min-height: 210px; max-height: 250px;
+  margin-left: 5px;
+  min-height: 210px; max-height: 250px;
   width: 25vh;
 }
 .card-size-xs{
   margin-left: 3px;
+}
+.truncate {
+min-width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .card-profile,
 .card-testimonial {
