- Change css - Translate controller for school to sekolah - Minor bug fix

--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -3943,7 +3943,7 @@ footer .btn {
 }
 .truncate {
   
-  min-width: 230px;
+  max-width: 23vh;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
