--- a/public/personality/assets/css/demo.css
+++ b/public/personality/assets/css/demo.css
@@ -6,9 +6,8 @@
 }
 .logo-container .logo{
     overflow: hidden;
-    border-radius: 50%;
-    border: 1px solid #333333;
-    width: 60px;
+
+    max-width: 100px;
     float: left;
 }
 .logo-container .brand{
