--- a/public/personality/assets/css/paper-bootstrap-wizard.css
+++ b/public/personality/assets/css/paper-bootstrap-wizard.css
@@ -1438,6 +1438,19 @@ input[type="button"]:focus {
   margin-top: 60px;
   text-shadow: 0 1px 3px black;
 }
+.mycard {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+}
+
+.mycard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.mycontainer {
+  padding: 2px 16px;
+}
 .footer a {
   color: #FFFFFF;
 }
